# itvdn-django

./: .dockerignore  .env-sample  .flake8  .pre-commit-config.yaml  Dockerfile  README.md  asgi.py  docker-compose.yaml  pyproject.toml  ruff.toml  settings.py  tests.py  urls.py  wsgi.py
.circleci/: config.yml
graph_app/: admin.py  models.py  schema.py  tests.py  types.py
graph_app/migrations/: 0001_initial.py
graph_app_two/: mutations.py
itvdn_django/: manage.py
itvdn_django/itvdn_django/: asgi.py  settings.py  urls.py  wsgi.py
itvdn_django/settings/: test.py
itvdn_shop/: admin.py  apps.py  models.py  urls.py  views.py
itvdn_shop/migrations/: 0001_initial.py
itvdn_shop/templates/: date_detail.html  week_archive.html
itvdn_shop/templates/admin/: base_site.html
itvdn_shop/templates/main/: header.html  index.html
reset_password_app/: apps.py
rest_api/: serializers.py  tests.py  urls.py  views.py
send_email/: apps.py  forms.py  tests.py  token_generator.py  urls.py  views.py
send_email/templates/: email.html  hello_email.html  index.html  login.html  register.html  signup.html  subscription.html
settings/: test.py
settings_ci/: test.py
user_app/: apps.py  forms.py  managers.py  models.py  signals.py  views.py
user_app/migrations/: 0001_initial.py
user_app/migrations/profile/: 0001_initial.py  0002_profile_delete_person.py  0003_alter_profile_bio.py
user_app/templates/: all_users.html  detailed_user.html  index.html  login.html
user_app/templates/accounts/: profile.html
