[project]
name = "itvdn-django"
version = "0.1.0"
description = "Simple ITVDN Django study project"
authors = [
    {name = "J0Z", email = "zaheugene80@gmail.com"}
]
keywords = ["django", "web", "learning"]
requires-python = ">=3.13"
dependencies = [
    "django>=5.0,<6.0",
    "django-environ>=0.11.0",
    "psycopg[binary]>=3.2.9",
]

[project.urls]
Repository = "https://github.com/EugeneZaharchenko/itvdn-django"

# Ruff configuration (replaces black and flake8)
[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [".venv", "migrations", "__pycache__", ".git"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["N999", "E203"]  # N999: Invalid module name (for your project structure)

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["user_app"]

# Pytest configuration
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings_ci.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--tb=short -v"

# Development dependencies
[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-django>=4.8.0",
    "ruff>=0.12.7",
    "django-debug-toolbar>=4.4.0",
]
